--- a/src/view/fxml/Vendas_temp.fxml
+++ b/src/view/fxml/Vendas_temp.fxml
@@ -33,7 +33,7 @@
             <Menu fx:id="menuGerenciar" disable="true" mnemonicParsing="false" text="Gerenciar">
                      <items>
                   <MenuItem mnemonicParsing="false" onAction="#openOnibus" text="Ônibus" />
-                  <MenuItem mnemonicParsing="false" text="Funcionários" />
+                  <MenuItem mnemonicParsing="false" onAction="#openFunc" text="Funcionários" />
                   <MenuItem fx:id="btTrecho" mnemonicParsing="false" onAction="#openTrecho" text="Trechos" />
                   <MenuItem mnemonicParsing="false" onAction="#openLinha" text="Linhas" />
                      </items></Menu>
