--- a/src/view/fxml/Linha.fxml
+++ b/src/view/fxml/Linha.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,41 +12,76 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="445.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LinhaController">
-    <TableView fx:id="tabelaLinha" layoutX="14.0" layoutY="29.0" prefHeight="343.0" prefWidth="414.0">
+<AnchorPane prefHeight="463.0" prefWidth="785.0" style="-fx-background-color: #FEEF80;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LinhaController">
+    <TableView fx:id="tabelaLinha" layoutX="14.0" layoutY="29.0" prefHeight="366.0" prefWidth="414.0">
         <columns>
             <TableColumn fx:id="cNome" prefWidth="240.0" text="Nome" />
             <TableColumn fx:id="cValorLinha" prefWidth="78.0" text="Valor Total" />
             <TableColumn fx:id="cQuilometragemLinha" prefWidth="95.0" text="Quilometragem" />
         </columns>
     </TableView>
-    <Button fx:id="btCriarLinha" layoutX="109.0" layoutY="378.0" mnemonicParsing="false" onAction="#criarLinha" prefHeight="25.0" prefWidth="135.0" text="Criar Linha" />
-    <Button fx:id="btVerLinha" layoutX="257.0" layoutY="378.0" mnemonicParsing="false" onAction="#verLinha" prefHeight="25.0" prefWidth="171.0" text="Visualizar linha" />
-    <ImageView fx:id="close" fitHeight="17.0" fitWidth="16.0" layoutX="762.0" layoutY="6.0" onMouseClicked="#close" pickOnBounds="true" preserveRatio="true">
-        <image>
-            <Image url="@../../resources/fechar.png" />
-        </image>
-        <cursor>
-            <Cursor fx:constant="CLOSED_HAND" />
-        </cursor>
-    </ImageView>
-   <Pane fx:id="paneLinhaTrecho" layoutX="454.0" layoutY="26.0" prefHeight="378.0" prefWidth="312.0">
+    <Button fx:id="btCriarLinha" layoutX="107.0" layoutY="421.0" mnemonicParsing="false" onAction="#criarLinha" prefHeight="25.0" prefWidth="135.0" text="Criar Linha" />
+    <Button fx:id="btVerLinha" layoutX="257.0" layoutY="421.0" mnemonicParsing="false" onAction="#verLinha" prefHeight="25.0" prefWidth="171.0" text="Visualizar linha" />
+   <Pane fx:id="paneLinhaTrecho" layoutX="442.0" layoutY="57.0" prefHeight="402.0" prefWidth="329.0" style="visibility: false;">
       <children>
-         <TableView fx:id="tabelaLinhaTrecho" layoutX="13.0" layoutY="37.0" prefHeight="254.0" prefWidth="287.0">
+         <Button fx:id="btExcluirLinha" layoutX="78.0" layoutY="363.0" mnemonicParsing="false" onAction="#excluirLinha" prefHeight="25.0" prefWidth="109.0" text="Excluir linha" />
+         <TableView fx:id="tabelaLinhaTrecho" layoutX="-2.0" layoutY="45.0" prefHeight="277.0" prefWidth="316.0">
            <columns>
-             <TableColumn fx:id="cTrechoOrigem" prefWidth="151.0" text="Cidade Origem" />
-             <TableColumn fx:id="cTrechoDestino" prefWidth="143.0" text="Cidade Destino" />
+             <TableColumn fx:id="cTrechoOrigem" prefWidth="165.0" text="Cidade Origem" />
+             <TableColumn fx:id="cTrechoDestino" prefWidth="150.0" text="Cidade Destino" />
            </columns>
          </TableView>
-         <Label layoutX="14.0" layoutY="8.0" prefHeight="20.0" prefWidth="40.0" text="Linha">
+         <Button fx:id="btExcluirTrecho" layoutX="156.0" layoutY="327.0" mnemonicParsing="false" onAction="#excluirTrecho" prefHeight="25.0" prefWidth="160.0" text="Excluir trecho selecionado" />
+         <ComboBox fx:id="cbTrechos" layoutX="60.0" layoutY="2.0" prefHeight="25.0" prefWidth="203.0" />
+         <Label fx:id="lbTrecho" layoutY="5.0" prefHeight="20.0" prefWidth="55.0" text="Trechos">
             <font>
                <Font size="14.0" />
             </font>
          </Label>
-         <TextField fx:id="txtNomeLinha" layoutX="82.0" layoutY="6.0" />
-         <Button fx:id="btExcluirTrecho" layoutX="192.0" layoutY="302.0" mnemonicParsing="false" onAction="#excluirTrecho" prefHeight="25.0" prefWidth="109.0" text="Excluir trecho" />
-         <Button fx:id="btExcluirLinha" layoutX="71.0" layoutY="350.0" mnemonicParsing="false" onAction="#excluirLinha" prefHeight="25.0" prefWidth="109.0" text="Excluir linha" />
-         <Button fx:id="btSalvarAlteracao" layoutX="203.0" layoutY="350.0" mnemonicParsing="false" onAction="#salvarAlteracao" prefHeight="25.0" prefWidth="109.0" text="Salvar Alterações" />
+         <Button fx:id="btAdicionarTrecho" layoutX="270.0" layoutY="3.0" mnemonicParsing="false" onAction="#adicionarTrecho" prefHeight="25.0" prefWidth="43.0" text="OK!" />
+         <Button fx:id="btSalvarAlteracao" layoutX="196.0" layoutY="363.0" mnemonicParsing="false" onAction="#salvarAlteracao" prefHeight="25.0" prefWidth="120.0" text="Salvar Alterações" />
+      </children>
+   </Pane>
+   <Label fx:id="lbLinha" layoutX="442.0" layoutY="32.0" prefHeight="20.0" prefWidth="49.0" style="visibility: false;" text="Linha">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </Label>
+   <TextField fx:id="txtNomeLinha" layoutX="501.0" layoutY="29.0" prefHeight="25.0" prefWidth="203.0" />
+   <Button fx:id="btAdicionarLinha" layoutX="711.0" layoutY="29.0" mnemonicParsing="false" onAction="#adicionarLinha" prefHeight="25.0" prefWidth="43.0" text="OK!" />
+   <Pane fx:id="paneCriaTrecho" layoutX="442.0" layoutY="14.0" prefHeight="422.0" prefWidth="329.0" style="visibility: false;">
+    <children>
+        <TextField fx:id="tfOrigem" layoutX="168.0" layoutY="43.0" />
+        <TextField fx:id="tfTempoDuracao" layoutX="168.0" layoutY="291.0" />
+        <TextField fx:id="tfValorPassagem" layoutX="168.0" layoutY="249.0" />
+        <TextField fx:id="tfValorSeguro" layoutX="168.0" layoutY="211.0" />
+        <TextField fx:id="tfTaxaEmbarque" layoutX="168.0" layoutY="168.0" />
+        <Label layoutX="39.0" layoutY="295.0" text="Tempo de Duração" />
+        <Label layoutX="40.0" layoutY="172.0" text="Taxa de Embarque" />
+        <Label layoutX="39.0" layoutY="253.0" text="Valor da Passagem" />
+        <Label layoutX="46.0" layoutY="215.0" text="Valor do Seguro" />
+        <Label layoutX="48.0" layoutY="130.0" text="Quilometragem" />
+        <Label layoutX="40.0" layoutY="87.0" text="Cidade de Destino" />
+        <Label layoutX="40.0" layoutY="47.0" text="Cidade de Origem" />
+        <TextField fx:id="tfQuilometragem" layoutX="168.0" layoutY="126.0" />
+        <TextField fx:id="tfDestino" layoutX="168.0" layoutY="83.0" />
+        <Label fx:id="lbValorTotal" layoutX="10.0" layoutY="295.0" />
+         <Label fx:id="lbCriarTrecho" layoutX="103.0" layoutY="14.0" prefHeight="20.0" prefWidth="120.0" text="Crie o novo trecho">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
+         <Button fx:id="btSalvarTrecho" layoutX="211.0" layoutY="348.0" mnemonicParsing="false" onAction="#salvarTrecho" prefHeight="25.0" prefWidth="101.0" text="Salvar Trecho" />
+         <Button fx:id="btCancelarTrecho" layoutX="93.0" layoutY="348.0" mnemonicParsing="false" onAction="#cancelarTrecho" prefHeight="25.0" prefWidth="101.0" text="Cancelar Trecho" />
+    </children>
+   </Pane>
+   <Pane fx:id="paneImg" layoutX="448.0" layoutY="27.0" prefHeight="410.0" prefWidth="323.0">
+      <children>
+         <ImageView fitHeight="303.0" fitWidth="302.0" layoutX="11.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../../resources/trecho.png" />
+            </image>
+         </ImageView>
       </children>
    </Pane>
 </AnchorPane>
