--- a/src/view/fxml/Passagem.fxml
+++ b/src/view/fxml/Passagem.fxml
@@ -32,7 +32,7 @@
       <RadioButton fx:id="rdCpf" layoutX="228.0" layoutY="413.0" mnemonicParsing="false" text="CPF cliente" toggleGroup="$searchType" />
       <TextField fx:id="txtSearchBar" layoutX="321.0" layoutY="409.0" prefHeight="25.0" prefWidth="197.0" />
       <Button layoutX="528.0" layoutY="409.0" mnemonicParsing="false" onAction="#searchForViagens" onMouseClicked="#selectPassagem" prefHeight="25.0" prefWidth="59.0" text="Buscar" />
-      <Button fx:id="btnReemicao" disable="true" layoutX="607.0" layoutY="409.0" mnemonicParsing="false" onAction="#printPassagem" prefHeight="25.0" prefWidth="86.0" text="Reemição" />
+      <Button fx:id="btnReemicao" disable="true" layoutX="607.0" layoutY="409.0" mnemonicParsing="false" onAction="#printPassagem" prefHeight="25.0" prefWidth="86.0" text="Reemissão" />
       <Button fx:id="btnDevolucao" disable="true" layoutX="703.0" layoutY="409.0" mnemonicParsing="false" onAction="#removePassagem" prefHeight="25.0" prefWidth="86.0" text="Devolução" />
       <Button fx:id="btnReagendamento" disable="true" layoutX="799.0" layoutY="409.0" mnemonicParsing="false" onAction="#reschedulePassagem" text="Reagendamento" />
       <Line endX="-100.0" endY="-25.0" layoutX="697.0" layoutY="434.0" opacity="0.4" startX="-100.0" />
